--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Etch a sketch</h1>
-    <div class = "container"></div>
+    <div class = "container">
+    </div>
 </body>
 </html>
