--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <h1>Etch a sketch</h1>
-    <div class = "container">
-    </div>
+    <div class = "container"></div>
 </body>
 </html>
