--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <h1>Etch a sketch</h1>
+    <div class = options>
+    <button class = "clear">Clear</button>
+    <button class = "input">Change size</button>
+    </div>
     <div class = "container"></div>
 </body>
 </html>
